frontend/test/should_fail/attrib_int_003.grg
using attrib_model_001;

rule r {
	ni : NINT;
	nl : NLONG;
	nb : NBOOL;
	nf : NFLOAT;
	nd : NDOUBLE;
	ns : NSTRING;

	modify {
		eval {
			ni.a = nd.a;
		}
	}
}

